--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "commit": "git-cz",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "report-coverage": "nyc --reporter=text-lcov | codecov",
     "test": "mocha src/index.test.js -w",
     "test:single": "nyc --reporter=html --reporter=text mocha src/index.test.js",
     "semantic-release": "semantic-release",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "chai": "4.2.0",
+    "codecov.io": "0.1.6",
     "commitizen": "3.0.4",
     "cz-conventional-changelog": "2.1.0",
     "husky": "1.2.0",
