--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "commit": "git-cz",
     "test": "mocha src/index.test.js -w",
-    "test:single": "mocha src/index.test.js",
+    "test:single": "nyc --reporter=html --reporter=text mocha src/index.test.js",
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once"
   },
@@ -33,9 +33,10 @@
     "commitizen": "3.0.4",
     "cz-conventional-changelog": "2.1.0",
     "mocha": "5.2.0",
-    "semantic-release": "^15.12.1",
-    "semantic-release-cli": "4.0.11",
-    "travis-deploy-once": "^5.0.9"
+    "nyc": "13.1.0",
+    "semantic-release": "15.12.1",
+    "semantic-release-cli": "4.0.12",
+    "travis-deploy-once": "5.0.9"
   },
   "config": {
     "commitizen": {
