--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "commit": "git-cz",
+    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "test": "mocha src/index.test.js -w",
     "test:single": "nyc --reporter=html --reporter=text mocha src/index.test.js",
     "semantic-release": "semantic-release",
@@ -32,6 +33,7 @@
     "chai": "4.2.0",
     "commitizen": "3.0.4",
     "cz-conventional-changelog": "2.1.0",
+    "husky": "1.2.0",
     "mocha": "5.2.0",
     "nyc": "13.1.0",
     "semantic-release": "15.12.1",
