--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "@flokyorch/starwars-names",
   "version": "0.0.0-development",
   "description": "Get random Star Wars names",
-  "main": "src/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "commit": "git-cz",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "report-coverage": "nyc --reporter=text-lcov | codecov",
-    "test": "mocha src/index.test.js -w",
-    "test:single": "nyc --reporter=html --reporter=text mocha src/index.test.js",
+    "test:watch": "npm t -- -w",
+    "test": "mocha --require @babel/register \"src/**/*.js\"",
+    "cover": "nyc --exclude .babelrc.js --exclude \"**/*{.,-}test.js\" --reporter=html --reporter=text npm t",
+    "build": "babel --copy-files --delete-dir-on-start --out-dir dist src",
+    "postbuild": "echo '.npmignore' >> dist/.npmignore && echo '**/*.test.js' >> dist/.npmignore",
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once"
   },
@@ -21,6 +24,9 @@
     "star",
     "wars"
   ],
+  "files": [
+    "/dist"
+  ],
   "author": "Jorge Vargas <jorge.vargas+npm@ppp.ninja> (http://www.ppp.ninja/)",
   "license": "MIT",
   "bugs": {
@@ -31,6 +37,10 @@
     "unique-random-array": "1.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "7.2.0",
+    "@babel/core": "7.2.0",
+    "@babel/preset-env": "7.2.0",
+    "@babel/register": "7.0.0",
     "chai": "4.2.0",
     "codecov.io": "0.1.6",
     "commitizen": "3.0.4",
@@ -38,6 +48,7 @@
     "husky": "1.2.0",
     "mocha": "5.2.0",
     "nyc": "13.1.0",
+    "rimraf": "2.6.2",
     "semantic-release": "15.12.1",
     "semantic-release-cli": "4.0.12",
     "travis-deploy-once": "5.0.9"
