--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: node_js
 cache:
   directories:
     - ~/.npm
+    - node_modules
+branches:
+  only:
+    - master
 notifications:
   email: false
 node_js:
